syntax = "proto3";

option java_multiple_files = true;

package com.example.proto;

message Category {
  int64 id = 1;
  string name = 2;
}

message Product {
  int64 id = 1;
  string title = 2;
  float price = 3;
  int32 category_id = 5;
}


service CategoryService {
  rpc createCategory(Category) returns(Category){}
}